Unset QApplication::applicationDisplayName()

Otherwise windows created by the portal get '- Portal' added to their window title, which should be avoided because it's an implementation detail meaningless to the user

BUG: 466056